# chinodeco

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
examples/: example.py  main.py
src/chinodeco/: __init__.py  base.py
src/chinodeco/debug/: __init__.py  debugger.py  errors.py
src/chinodeco/decodsl/: __init__.py  control.py  registry.py
src/chinodeco/parameter/: __init__.py  adders.py  pretreat.py
src/chinodeco/pretreat/: __init__.py  parameter.py  tagging.py
tests/: test_base.py  test_debug_debugger.py  test_decodsl_control.py  test_decodsl_registry.py  test_pretreat_attrset.py  test_pretreat_parameter.py
