[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[project]
name = "chinodeco"
version = "0.0.11"
authors = [
    { name="KafuuChino", email="KafuuChino2022@users.noreply.github.com" },
]
description = "This package is a collection of decorators I've used"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/KafuuChino2022/chinodeco/"
Issues = "https://github.com/KafuuChino2022/chinodeco/issues"